UltimaX Math Library/Source/UXMath/UXMath.h

//    |œœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœ|
//    |œœ                  Matrix 3 Prototypes                   œœ|
//    |œœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœ|


_declspec(dllexport) bool  _stdcall M3_Zero(D3DMATRIX3& retMatrix);
_declspec(dllexport) bool  _stdcall M3_Identity(D3DMATRIX3& retMatrix);
_declspec(dllexport) bool  _stdcall M3_IsIdentity(D3DMATRIX3& Matrix);
_declspec(dllexport) float _stdcall M3_Determinate(D3DMATRIX3& Matrix);
_declspec(dllexport) bool  _stdcall M3_Copy(D3DMATRIX3& retMatrix, D3DMATRIX3& Matrix);
_declspec(dllexport) bool  _stdcall M3_Inverse(D3DMATRIX3& retMatrix, D3DMATRIX3& Matrix);
_declspec(dllexport) bool  _stdcall M3_Transpose(D3DMATRIX3& retMatrix, D3DMATRIX3& Matrix);
	
_declspec(dllexport) bool  _stdcall M3_Add(D3DMATRIX3& retMatrix, D3DMATRIX3& Matrix1, D3DMATRIX3& Matrix2);
_declspec(dllexport) bool  _stdcall M3_Subtract(D3DMATRIX3& retMatrix, D3DMATRIX3& Matrix1, D3DMATRIX3& Matrix2);
_declspec(dllexport) bool  _stdcall M3_DivideMS(D3DMATRIX3& retMatrix, D3DMATRIX3& Matrix, float Scalar);
_declspec(dllexport) bool  _stdcall M3_DivideSM(D3DMATRIX3& retMatrix, float Scalar, D3DMATRIX3& Matrix);
_declspec(dllexport) bool  _stdcall M3_DivideMM(D3DMATRIX3& retMatrix, D3DMATRIX3& Matrix1, D3DMATRIX3& Matrix2);
_declspec(dllexport) bool  _stdcall M3_MultiplyMM(D3DMATRIX3& retMatrix, D3DMATRIX3& Matrix1, D3DMATRIX3& Matrix2);
_declspec(dllexport) bool  _stdcall M3_MultiplyMS(D3DMATRIX3& retMatrix, D3DMATRIX3& Matrix, float Scalar);
_declspec(dllexport) bool  _stdcall M3_MultiplySM(D3DMATRIX3& retMatrix, float Scalar, D3DMATRIX3& Matrix);
_declspec(dllexport) bool  _stdcall M3_MultiplyMV(D3DVECTOR& retVector, D3DMATRIX3& Matrix, D3DVECTOR& Vector);
_declspec(dllexport) bool  _stdcall M3_MultiplyVM(D3DVECTOR& retVector, D3DVECTOR& Vector, D3DMATRIX3& Matrix);
//    |œœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœ|
//    |œœ                  Matrix 4 Prototypes                   œœ|
//    |œœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœ|


_declspec(dllexport) bool  _stdcall M4_Zero(D3DMATRIX& retMatrix);
_declspec(dllexport) bool  _stdcall M4_Identity(D3DMATRIX& retMatrix);
_declspec(dllexport) bool  _stdcall M4_IsIdentity(D3DMATRIX& Matrix);
_declspec(dllexport) bool  _stdcall M4_Copy(D3DMATRIX& retMatrix, D3DMATRIX& Matrix);
_declspec(dllexport) bool  _stdcall M4_Inverse(D3DMATRIX& retMatrix, D3DMATRIX& Matrix);
_declspec(dllexport) bool  _stdcall M4_Transpose(D3DMATRIX& retMatrix, D3DMATRIX& Matrix);
_declspec(dllexport) bool  _stdcall M4_GetLocation(D3DVECTOR& retVector, D3DMATRIX& Matrix);
_declspec(dllexport) bool  _stdcall M4_RotateX(D3DMATRIX& retMatrix, float Angle);
_declspec(dllexport) bool  _stdcall M4_RotateY(D3DMATRIX& retMatrix, float Angle);
_declspec(dllexport) bool  _stdcall M4_RotateZ(D3DMATRIX& retMatrix, float Angle);
_declspec(dllexport) bool  _stdcall M4_Scale(D3DMATRIX& retMatrix, D3DVECTOR& Amount);
_declspec(dllexport) bool  _stdcall M4_Position(D3DMATRIX& retMatrix, D3DVECTOR& Position);
_declspec(dllexport) bool  _stdcall M4_Translate(D3DMATRIX& retMatrix, D3DVECTOR& Position);
_declspec(dllexport) bool  _stdcall M4_AxisAngle(D3DMATRIX& retMatrix, D3DVECTOR& Axis, float Angle);
_declspec(dllexport) bool  _stdcall M4_RotateEX(D3DMATRIX& retMatrix, D3DMATRIX& Matrix, float AngleX, float AngleY, float AngleZ);
_declspec(dllexport) bool  _stdcall M4_ObjectLookAt(D3DMATRIX& retMatrix, D3DVECTOR& Location, D3DVECTOR& LookAt, D3DVECTOR& Up);
_declspec(dllexport) bool  _stdcall M4_CameraLookAt(D3DMATRIX& retMatrix, D3DVECTOR& Location, D3DVECTOR& LookAt, D3DVECTOR& Up);
_declspec(dllexport) bool  _stdcall M4_OpMatrix(D3DMATRIX& retMatrix, D3DVECTOR& Position, D3DVECTOR& Rotation, D3DVECTOR& ScaleAmount);
_declspec(dllexport) bool  _stdcall M4_Add(D3DMATRIX& retMatrix, D3DMATRIX& Matrix1, D3DMATRIX& Matrix2);
_declspec(dllexport) bool  _stdcall M4_Subtract(D3DMATRIX& retMatrix, D3DMATRIX& Matrix1, D3DMATRIX& Matrix2);
_declspec(dllexport) bool  _stdcall M4_DivideMS(D3DMATRIX& retMatrix, D3DMATRIX Matrix, float Scalar);
_declspec(dllexport) bool  _stdcall M4_DivideSM(D3DMATRIX& retMatrix, float Scalar, D3DMATRIX& Matrix);
_declspec(dllexport) bool  _stdcall M4_DivideMM(D3DMATRIX& retMatrix, D3DMATRIX& Matrix1, D3DMATRIX& Matrix2);
_declspec(dllexport) bool  _stdcall M4_MultiplyMM(D3DMATRIX& retMatrix, D3DMATRIX& Matrix1, D3DMATRIX& Matrix2);
_declspec(dllexport) bool  _stdcall M4_MultiplyMS(D3DMATRIX& retMatrix, D3DMATRIX& Matrix, float Scalar);
_declspec(dllexport) bool  _stdcall M4_MultiplySM(D3DMATRIX& retMatrix, float Scalar, D3DMATRIX& Matrix);
_declspec(dllexport) bool  _stdcall M4_MultiplyMV(D3DVECTOR4& retVector, D3DMATRIX& Matrix, D3DVECTOR4& Vector);
_declspec(dllexport) bool  _stdcall M4_MultiplyVM(D3DVECTOR4& retVector, D3DVECTOR4& Vector, D3DMATRIX& Matrix);
//    |œœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœ|
//    |œœ                  Quaternion Prototypes                 œœ|
//    |œœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœœ|


_declspec(dllexport) bool  _stdcall QT_Identity(D3DQUATERNION& retQuat);
_declspec(dllexport) bool  _stdcall QT_IsIdentity(D3DQUATERNION& Quat);
_declspec(dllexport) bool  _stdcall QT_Zero(D3DQUATERNION& retQuat);
_declspec(dllexport) bool  _stdcall QT_Negate(D3DQUATERNION& retQuat);
_declspec(dllexport) bool  _stdcall QT_Copy(D3DQUATERNION& retQuat, D3DQUATERNION& Quat);
_declspec(dllexport) float _stdcall QT_Magnitude(D3DQUATERNION& Quat);
_declspec(dllexport) float _stdcall QT_GetScalar(D3DQUATERNION& Quat);
_declspec(dllexport) bool  _stdcall QT_GetVector(D3DVECTOR& retVector, D3DQUATERNION& Quat);
_declspec(dllexport) float _stdcall QT_MagnitudeSquared(D3DQUATERNION& Quat);
_declspec(dllexport) float _stdcall QT_QuaternionGetAngle(D3DQUATERNION& Quat);
_declspec(dllexport) bool  _stdcall QT_QuaternionGetAxis(D3DVECTOR& retVector, D3DQUATERNION& Quat);
_declspec(dllexport) bool  _stdcall QT_QuaternionRotate(D3DQUATERNION& retQuat, D3DQUATERNION& Quat1, D3DQUATERNION& Quat2);
_declspec(dllexport) bool  _stdcall QT_QuaternionVectorRotate(D3DVECTOR& retVector, D3DQUATERNION& Quat, D3DVECTOR& Vector);
_declspec(dllexport) bool  _stdcall QT_CreateEularAnglesFromQuaternion(D3DVECTOR& retVector, D3DQUATERNION& Quat);
_declspec(dllexport) bool  _stdcall QT_CreateQuaternionFromEularAngles(D3DQUATERNION& retQuat, float X, float Y, float Z);
_declspec(dllexport) bool  _stdcall QT_CreateQuaternionFromAxisAngle(D3DQUATERNION& retQuat, float X, float Y, float Z, float Degrees);
_declspec(dllexport) bool  _stdcall QT_Add(D3DQUATERNION& retQuat, D3DQUATERNION& Quat1, D3DQUATERNION& Quat2);
_declspec(dllexport) bool  _stdcall QT_Average(D3DQUATERNION& retQuat, D3DQUATERNION& Quat1, D3DQUATERNION& Quat2);
_declspec(dllexport) bool  _stdcall QT_Subtract(D3DQUATERNION& retQuat, D3DQUATERNION& Quat1, D3DQUATERNION& Quat2);
_declspec(dllexport) bool  _stdcall QT_DivideSQ(D3DQUATERNION& retQuat, float Scalar, D3DQUATERNION& Quat);
_declspec(dllexport) bool  _stdcall QT_DivideQS(D3DQUATERNION& retQuat, D3DQUATERNION& Quat, float Scalar);
_declspec(dllexport) bool  _stdcall QT_DivideQQ(D3DQUATERNION& retQuat, D3DQUATERNION& Quat1, D3DQUATERNION& Quat2);
_declspec(dllexport) bool  _stdcall QT_MultiplySQ(D3DQUATERNION& retQuat, float Scalar, D3DQUATERNION& Quat);
_declspec(dllexport) bool  _stdcall QT_MultiplyQS(D3DQUATERNION& retQuat, D3DQUATERNION& Quat, float Scalar);
_declspec(dllexport) float _stdcall QT_MultiplyQQ(D3DQUATERNION& Quat1, D3DQUATERNION& Quat2);
_declspec(dllexport) bool  _stdcall QT_MultiplyQV(D3DQUATERNION& retQuat, D3DQUATERNION& Quat, D3DVECTOR& Vector);
_declspec(dllexport) bool  _stdcall QT_MultiplyVQ(D3DQUATERNION& retQuat, D3DVECTOR& Vector, D3DQUATERNION& Quat);
_declspec(dllexport) bool  _stdcall QT_CreateMatrix(D3DQUATERNION& Quat, D3DMATRIX *Matrix);