UltimaX Math Library/UXMath VB APIs/UXMath.bas


'Matrix 3x3 Math/Manipulation Functions
Public Declare Function M3_Zero Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX3) As Boolean
Public Declare Function M3_Identity Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX3) As Boolean
Public Declare Function M3_IsIdentity Lib "UXMath.dll" (ByRef Matrix As D3DMATRIX3) As Boolean
Public Declare Function M3_Determinate Lib "UXMath.dll" (ByRef Matrix As D3DMATRIX3) As Single
Public Declare Function M3_Copy Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX3, ByRef Matrix As D3DMATRIX3) As Boolean
Public Declare Function M3_Inverse Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX3, ByRef Matrix As D3DMATRIX3) As Boolean
Public Declare Function M3_Transpose Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX3, ByRef Matrix As D3DMATRIX3) As Boolean
Public Declare Function M3_Add Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX3, ByRef Matrix1 As D3DMATRIX3, ByRef Matrix2 As D3DMATRIX3) As Boolean
Public Declare Function M3_Subtract Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX3, ByRef Matrix1 As D3DMATRIX3, ByRef Matrix2 As D3DMATRIX3) As Boolean
Public Declare Function M3_DivideMS Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX3, ByRef Matrix As D3DMATRIX3, ByVal Scalar As Single) As Boolean
Public Declare Function M3_DivideSM Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX3, ByRef Scalar As Single, ByVal Matrix As D3DMATRIX3) As Boolean
Public Declare Function M3_DivideMM Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX3, ByRef Matrix1 As D3DMATRIX3, ByRef Matrix2 As D3DMATRIX3) As Boolean
Public Declare Function M3_MultiplyMM Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX3, ByRef Matrix1 As D3DMATRIX3, ByRef Matrix2 As D3DMATRIX3) As Boolean
Public Declare Function M3_MultiplyMS Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX3, ByRef Matrix As D3DMATRIX3, ByVal Scalar As Single) As Boolean
Public Declare Function M3_MultiplySM Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX3, ByRef Scalar As Single, ByVal Matrix As D3DMATRIX3) As Boolean
Public Declare Function M3_MultiplyMV Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX3, ByRef Matrix As D3DMATRIX3, ByVal Vector As D3DVECTOR) As Boolean
Public Declare Function M3_MultiplyVM Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX3, ByRef Vector As D3DVECTOR, ByVal Matrix As D3DMATRIX3) As Boolean


'===4x4 Matrix============================================================================
'-----------------------------------------------------------------------------------------


'Matrix 4x4 Math/Manipulation Functions
Public Declare Function M4_Zero Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX) As Boolean
Public Declare Function M4_Identity Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX) As Boolean
Public Declare Function M4_IsIdentity Lib "UXMath.dll" (ByRef Matrix As D3DMATRIX) As Boolean
Public Declare Function M4_Copy Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Matrix As D3DMATRIX) As Boolean
Public Declare Function M4_Inverse Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Matrix As D3DMATRIX) As Boolean
Public Declare Function M4_Transpose Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Matrix As D3DMATRIX) As Boolean
Public Declare Function M4_GetLocation Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Matrix As D3DMATRIX) As Boolean
Public Declare Function M4_RotateX Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByVal Angle As Single) As Boolean
Public Declare Function M4_RotateY Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByVal Angle As Single) As Boolean
Public Declare Function M4_RotateZ Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByVal Angle As Single) As Boolean
Public Declare Function M4_Scale Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Amount As D3DVECTOR) As Boolean
Public Declare Function M4_Position Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Position As D3DVECTOR) As Boolean
Public Declare Function M4_Translate Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Position As D3DVECTOR) As Boolean
Public Declare Function M4_Add Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Matrix1 As D3DMATRIX, ByRef Matrix2 As D3DMATRIX) As Boolean
Public Declare Function M4_Subtract Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Matrix1 As D3DMATRIX, ByRef Matrix2 As D3DMATRIX) As Boolean
Public Declare Function M4_DivideMS Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Matrix As D3DMATRIX, ByVal Scalar As Single) As Boolean
Public Declare Function M4_DivideSM Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Scalar As Single, ByVal Matrix As D3DMATRIX) As Boolean
Public Declare Function M4_DivideMM Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Matrix1 As D3DMATRIX, ByRef Matrix2 As D3DMATRIX) As Boolean
Public Declare Function M4_MultiplyMM Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Matrix1 As D3DMATRIX, ByRef Matrix2 As D3DMATRIX) As Boolean
Public Declare Function M4_MultiplyMS Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Matrix As D3DMATRIX, ByVal Scalar As Single) As Boolean
Public Declare Function M4_MultiplySM Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Scalar As Single, ByVal Matrix As D3DMATRIX) As Boolean
Public Declare Function M4_MultiplyMV Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Matrix As D3DMATRIX, ByVal Vector As D3DVECTOR4) As Boolean
Public Declare Function M4_MultiplyVM Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Vector As D3DVECTOR4, ByVal Matrix As D3DMATRIX) As Boolean

'Advanced/Usefull Matrix 4x4 Functions
Public Declare Function M4_AxisAngle Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Axis As D3DVECTOR, ByVal Angle As Single) As Boolean
Public Declare Function M4_RotateEX Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Matrix As D3DMATRIX, ByVal AngleX As Single, ByVal AngleY As Single, ByVal AngleZ As Single) As Boolean
Public Declare Function M4_ObjectLookAt Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Location As D3DVECTOR, ByRef LookAt As D3DVECTOR, ByRef Up As D3DVECTOR) As Boolean
Public Declare Function M4_CameraLookAt Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Location As D3DVECTOR, ByRef LookAt As D3DVECTOR, ByRef Up As D3DVECTOR) As Boolean
Public Declare Function M4_OpMatrix Lib "UXMath.dll" (ByRef retMatrix As D3DMATRIX, ByRef Position As D3DVECTOR, ByRef Rotation As D3DVECTOR, ByRef ScaleAmount As D3DVECTOR) As Boolean


'===Quaternion============================================================================
'-----------------------------------------------------------------------------------------


'Quaternion Math/Manipulation Functions
Public Declare Function QT_Identity Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION) As Boolean
Public Declare Function QT_IsIdentity Lib "UXMath.dll" (ByRef Quat As D3DQUATERNION) As Boolean
Public Declare Function QT_Zero Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION) As Boolean
Public Declare Function QT_Negate Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION) As Boolean
Public Declare Function QT_Copy Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION, ByRef Quat As D3DQUATERNION) As Boolean
Public Declare Function QT_Add Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION, ByRef Quat1 As D3DQUATERNION, ByRef Quat2 As D3DQUATERNION) As Boolean
Public Declare Function QT_Average Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION, ByRef Quat1 As D3DQUATERNION, ByRef Quat2 As D3DQUATERNION) As Boolean
Public Declare Function QT_Subtract Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION, ByRef Quat1 As D3DQUATERNION, ByRef Quat2 As D3DQUATERNION) As Boolean
Public Declare Function QT_DivideSQ Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION, ByVal Scalar As Single, ByRef Quat As D3DQUATERNION) As Boolean
Public Declare Function QT_DivideQS Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION, ByVal Quat As D3DQUATERNION, ByRef Scalar As Single) As Boolean
Public Declare Function QT_DivideQQ Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION, ByRef Quat1 As D3DQUATERNION, ByRef Quat2 As D3DQUATERNION) As Boolean
Public Declare Function QT_MultiplySQ Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION, ByVal Scalar As Single, ByRef Quat As D3DQUATERNION) As Boolean
Public Declare Function QT_MultiplyQS Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION, ByVal Quat As D3DQUATERNION, ByRef Scalar As Single) As Boolean
Public Declare Function QT_MultiplyQQ Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION, ByRef Quat1 As D3DQUATERNION, ByRef Quat2 As D3DQUATERNION) As Boolean
Public Declare Function QT_MultiplyQV Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION, ByRef Quat As D3DQUATERNION, ByRef Vector As D3DVECTOR) As Boolean
Public Declare Function QT_MultiplyVQ Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION, ByRef Vector As D3DVECTOR, ByRef Quat As D3DQUATERNION) As Boolean

'Advanced/Usefull Quaternion Functions
Public Declare Function QT_CreateMatrix Lib "UXMath.dll" (ByRef Quat As D3DQUATERNION, ByRef Matrix As D3DMATRIX) As Boolean
Public Declare Function QT_Magnitude Lib "UXMath.dll" (ByRef Quat As D3DQUATERNION) As Single
Public Declare Function QT_MagnitudeSquared Lib "UXMath.dll" (ByRef Quat As D3DQUATERNION) As Single
Public Declare Function QT_GetScalar Lib "UXMath.dll" (ByRef Quat As D3DQUATERNION) As Single
Public Declare Function QT_GetVector Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Quat As D3DQUATERNION) As Boolean
Public Declare Function QT_QuaternionGetAngle Lib "UXMath.dll" (ByRef Quat As D3DQUATERNION) As Single
Public Declare Function QT_QuaternionGetAxis Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Quat As D3DQUATERNION) As Boolean
Public Declare Function QT_QuaternionRotate Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION, ByRef Quat1 As D3DQUATERNION, ByRef Quat2 As D3DQUATERNION) As Boolean
Public Declare Function QT_QuaternionVectorRotate Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Quat As D3DQUATERNION, ByRef Vector As D3DVECTOR) As Boolean
Public Declare Function QT_CreateEularAnglesFromQuaternion Lib "UXMath.dll" (ByRef retVector As D3DVECTOR, ByRef Quat As D3DQUATERNION) As Boolean
Public Declare Function QT_CreateQuaternionFromEularAngles Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION, ByVal X As Single, ByVal Y As Single, ByVal Z As Single) As Boolean
Public Declare Function QT_CreateQuaternionFromAxisAngle Lib "UXMath.dll" (ByRef retQuat As D3DQUATERNION, ByVal X As Single, ByVal Y As Single, ByVal Z As Single, ByVal Degrees As Single) As Boolean

 
'===Usefull Functions=====================================================================
'-----------------------------------------------------------------------------------------


Public Function PI() As Single

 PI = 3.14159265358979
 
End Function

Public Function Inverse_PI() As Single

 Inverse_PI = 0.318309886183791
 
End Function

Public Function Degrees_90() As Single

 Degrees_90 = 1.5707963267949
 
End Function

Public Function Degrees_180() As Single

 Degrees_180 = 3.14159265358979
 
End Function

Public Function Degrees_270() As Single
 
 Degrees_270 = 4.71238898038469
 
End Function

Public Function Degrees_360() As Single
 
 Degrees_360 = 6.28318530717959
 
End Function

Public Function Epsilon() As Single
 
 Epsilon = 0.0001
 
End Function

Public Function Radiant() As Single
 
 Radiant = 1.74532925199433E-02
 
End Function

Public Function HugeSingle() As Single
 
 HugeSingle = 1E+38
 
End Function

Public Function Radian_to_Degree(Radians As Single) As Single
 
 Radian_to_Degree = ((Radians * 180) / PI)
 
End Function

Public Function Degrees_To_Radian(Degrees As Single) As Single
 
 Degrees_To_Radian = ((Degrees * PI) / 180)
 
End Function

Public Function V2_Vector(ByVal X As Single, ByVal Y As Single) As D3DVECTOR2
 
 V2_Vector.X = X
 V2_Vector.Y = Y
 
End Function

Public Function V3_Vector(ByVal X As Single, ByVal Y As Single, ByVal Z As Single) As D3DVECTOR
 
 V3_Vector.X = X
 V3_Vector.Y = Y
 V3_Vector.Z = Z
 
End Function
